--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ hr{
 
 
     
-	box-shadow: 7px 7px 15px -5px  #161517 100%);
+	box-shadow: 7px 7px 15px -5px  #161517 100%;
 	background:linear-gradient(to bottom,   #6975ff  5%,  #161517 100%);
 	background-color:#ffffff;
 	border-radius:8px;
@@ -171,3 +171,77 @@ hr{
         padding: 50px 0px 20px;
         background:#6e21fc;;
 }
+#abc {
+    width:100%;
+    height:100%;
+    opacity:.95;
+    top:0;
+    left:0;
+    display:none;
+    position:fixed;
+    background-color:#313131;
+    overflow:auto
+    }
+    img#close {
+    position:absolute;
+    right:10px;
+    top:10px;
+    cursor:pointer
+    }
+    div#popupContact {
+    position:absolute;
+    left:50%;
+    top:13%;
+    margin-left:-202px;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Roboto Slab', serif;
+    }
+    form {
+    max-width:250px;
+    max-height:440px;
+    min-width:0px;
+    padding:10px 60px;
+    border:2px solid gray;
+    border-radius:10px;
+    font-family: 'Roboto Slab', serif;
+    background-color:#302c2c;
+    }
+    
+    input[type=text] {
+    width:82%;
+    padding:10px;
+    margin-top:30px;
+    border:1px solid #ccc;
+    padding-left:40px;
+    font-size:16px;
+    font-family:raleway
+    }
+    #name {
+    background-image:url(../images/name.jpg);
+    background-repeat:no-repeat;
+    background-position:5px 7px
+    }
+    #email {
+    background-image:url(../images/email.png);
+    background-repeat:no-repeat;
+    background-position:5px 7px
+    }
+    textarea {
+    background-image:url(../images/msg.png);
+    background-repeat:no-repeat;
+    background-position:5px 7px;
+    width:82%;
+    height:95px;
+    padding:10px;
+    resize:none;
+    margin-top:30px;
+    border:1px solid #ccc;
+    padding-left:40px;
+    font-size:16px;
+    font-family:raleway;
+    margin-bottom:30px
+    }
+    ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+        color: white;
+        opacity: 1; /* Firefox */
+      }
